RESOLVED FIXED305776
[GTK][Stable] Constraint Validation errors appear with a blank message
https://bugs.webkit.org/show_bug.cgi?id=305776
Summary [GTK][Stable] Constraint Validation errors appear with a blank message
Douglas Silva
Reported 2026-01-19 08:06:57 PST
Created attachment 478068 [details] Screenshot of GNOME Web showing a blank validation error message While the validation itself is working, the error message is always blank. See the attached screenshot, please. I've tested it on "input[type=text]" and "input[type=file]" with the `required` attribute, using the Constraint Validation API only [1] — i.e. "HTMLInputElement.setCustomValidity()". I can reproduce it on this simple example from MDN: [2] <form> <div class="group"> <input type="text" /> <label>Normal</label> </div> <div class="group"> <input type="text" required /> <label>Required</label> </div> <input type="submit" /> </form> Debugging information collected from the Epiphany browser (GNOME Web): - WebKitGTK 2.50.4 - GStreamer 1.26.8 - GTK 4.20.3 - Libadwaita 1.8.3 - Distributor: GNOME [1] https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/Form_validation#validating_forms_using_javascript [2] https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/required#example
Attachments
Screenshot of GNOME Web showing a blank validation error message (51.74 KB, image/png)
2026-01-19 08:06 PST, Douglas Silva
no flags
Screenshot of GNOME Web running on elementary OS, reproducing the bug on the linked MDN page. (8.63 KB, image/png)
2026-01-19 08:10 PST, Douglas Silva
no flags
Patch for 2.50 (925 bytes, patch)
2026-01-20 02:18 PST, Carlos Garcia Campos
no flags
Patch for 2.50 (1.07 KB, patch)
2026-01-20 02:33 PST, Carlos Garcia Campos
no flags
Douglas Silva
Comment 1 2026-01-19 08:10:35 PST
Created attachment 478069 [details] Screenshot of GNOME Web running on elementary OS, reproducing the bug on the linked MDN page.
Carlos Garcia Campos
Comment 2 2026-01-20 02:18:25 PST
Created attachment 478075 [details] Patch for 2.50 This was fixed in main already. This would be the patch for 2.50, since the commit in main shouldn't be backported as is.
Carlos Garcia Campos
Comment 3 2026-01-20 02:33:38 PST
Created attachment 478076 [details] Patch for 2.50
Note You need to log in before you can comment on or make changes to this bug.