[GTK][Stable] Constraint Validation errors appear with a blank message https://bugs.webkit.org/show_bug.cgi?id=305776

Reviewed by Adrian Perez de Castro.

Use makeString() instead of g_markup_printf_escaped() to ensure the font
size float is not formatted depending on the locale.

* Source/WebCore/platform/gtk/ValidationBubbleGtk.cpp:
(WebCore::ValidationBubble::ValidationBubble):